# Geo-API

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  pytest_bounds.txt  pytest_err.txt  pytest_health.txt  pytest_output.txt  pytest_output3.txt  pytest_output_current.txt  test_out.txt  test_plot.py
docs/: index.md  quickstart.md
examples/: fire_detection_dashboard.py  nigeria_health_facilities.py  west_africa_population.py
src/geoafrica/: __init__.py  cli.py
src/geoafrica/analysis/: __init__.py  proximity.py  spatial.py  zonal_stats.py
src/geoafrica/core/: __init__.py  config.py  exceptions.py  session.py
src/geoafrica/datasets/: __init__.py  boundaries.py  climate.py  elevation.py  fire.py  health.py  humanitarian.py  osm.py  population.py  roads.py  satellite.py
src/geoafrica/io/: __init__.py  readers.py  writers.py
src/geoafrica/viz/: __init__.py  maps.py
tests/: conftest.py  test_analysis.py  test_boundaries.py  test_climate.py  test_core.py  test_elevation.py  test_fire.py  test_health.py  test_humanitarian.py  test_io.py  test_osm.py  test_population.py  test_roads.py  test_satellite.py  test_viz.py
