[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geoafrica"
version = "0.2.0"
description = "A unified geospatial data SDK for Africa and the world - open data, one package."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Merczcord Technologies Ltd.", email = "dev@merczcord.com" }
]
keywords = [
  "geospatial", "africa", "gis", "remote-sensing", "open-data",
  "osm", "worldpop", "nasa", "hdx", "satellite", "climate"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.9"
dependencies = [
  # Core geospatial stack
  "geopandas>=0.14.0",
  "shapely>=2.0.0",
  "pyproj>=3.6.0",
  "fiona>=1.9.0",
  # Raster processing
  "rasterio>=1.3.0",
  "xarray>=2023.1.0",
  "rioxarray>=0.15.0",
  # HTTP & data access
  "requests>=2.31.0",
  "requests-cache>=1.1.0",
  "httpx>=0.27.0",
  # Data manipulation
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "pyarrow>=14.0.0",
  # Visualization
  "folium>=0.15.0",
  "matplotlib>=3.7.0",
  # HDX access
  "hdx-python-api>=6.0.0",
  # CLI
  "click>=8.1.0",
  "rich>=13.0.0",
  # Utilities
  "pydantic>=2.0.0",
  "tomllib; python_version < '3.11'",
  "tqdm>=4.65.0",
]

[project.optional-dependencies]
satellite = [
  "pystac>=1.9.0",
  "pystac-client>=0.7.0",
  "stackstac>=0.5.0",
]
climate = [
  "cdsapi>=0.6.0",
  "netCDF4>=1.6.0",
]
full = [
  "geoafrica[satellite,climate]",
]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "pytest-mock>=3.11.0",
  "responses>=0.23.0",
  "black>=23.0.0",
  "ruff>=0.1.0",
  "mypy>=1.5.0",
  "mkdocs-material>=9.0.0",
  "mkdocstrings[python]>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/Mercy14846/Geo-API"
Documentation = "https://geoafrica.readthedocs.io"
Repository = "https://github.com/Mercy14846/Geo-API"
"Bug Tracker" = "https://github.com/Mercy14846/Geo-API/issues"
"Merczcord Technologies" = "https://merczcord.com"

[project.scripts]
geoafrica = "geoafrica.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/geoafrica"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/docs",
  "/examples",
  "/README.md",
  "/LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
